<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/titleApp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/gasPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="start"
        android:text="@string/priceGas"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gasPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:padding="@dimen/textview_padding" />

    <SeekBar
        android:id="@+id/gasPriceSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:background="@color/colorPrimaryDark"
        android:progress="300"
        android:max="600"/>

    <TextView
        android:id="@+id/etanolPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="start"
        android:text="@string/etanolPrice"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/etanolPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:padding="@dimen/textview_padding" />

    <SeekBar
        android:id="@+id/etanolPriceSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:background="@color/colorPrimaryDark"
        android:progress="300"
        android:max="600"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resultTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:hint="@string/resultLabel"
        app:boxStrokeColor="@color/colorAccent">


        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resultLabel"
            android:shadowColor="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textColorHighlight="@color/design_default_color_primary_dark"
            android:textColorHint="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/petroleum" />


</GridLayout>